[bug] keep typo in struct def

--- a/Move.toml
+++ b/Move.toml
@@ -2,7 +2,7 @@
 name = "suifund"
 edition = "2024.beta" # edition = "legacy" to use legacy (pre-2024) Move
 # license = ""           # e.g., "MIT", "GPL", "Apache 2.0"
-authors = ["Pika (pika042@hotmail.com)"]      # e.g., ["Joe Smith (joesmith@noemail.com)", "John Snow (johnsnow@noemail.com)"]
+authors = ["Pika (pika042@hotmail.com)", "Damir (damirka.ru@gmail.com)", "Mindfrog"]      # e.g., ["Joe Smith (joesmith@noemail.com)", "John Snow (johnsnow@noemail.com)"]
 
 [dependencies]
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/mainnet" }
